--- a/public/page2.html
+++ b/public/page2.html
@@ -48,7 +48,37 @@
   </head>
   <body class="portfolio" itemscope itemtype="http://schema.org/WebPage">
     <!--here start the Main Header-->
-    <header class="main-header">
+    <header class="main-header"><div class="modal">
+  <div class="modal-container">
+    <div class="modal-left">
+	  <img src="assets/img/Logo.png" alt="">
+      <h1 class="modal-title">Welcome!</h1>
+      <p class="modal-desc">Fanny pack hexagon food truck, street art waistcoat kitsch.</p>
+      <div class="input-block">
+        <label for="email" class="input-label">Email</label>
+        <input type="email" name="email" id="email" placeholder="Email">
+      </div>
+      <div class="input-block">
+        <label for="password" class="input-label">Password</label>
+        <input type="password" name="password" id="password" placeholder="Password">
+      </div>
+      <div class="modal-buttons">
+        <a href="" class="">Forgot your password?</a>
+        <button class="input-button">Login</button>
+      </div>
+      <p class="sign-up">Don't have an account? <a href="#">Sign up now</a></p>
+    </div>
+    <div class="modal-right">
+      <img src="assets/img/ufc-ri-modal.png" alt="">
+    </div>
+    <button class="icon-button close-button">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+    		<path d="M 25 3 C 12.86158 3 3 12.86158 3 25 C 3 37.13842 12.86158 47 25 47 C 37.13842 47 47 37.13842 47 25 C 47 12.86158 37.13842 3 25 3 z M 25 5 C 36.05754 5 45 13.94246 45 25 C 45 36.05754 36.05754 45 25 45 C 13.94246 45 5 36.05754 5 25 C 5 13.94246 13.94246 5 25 5 z M 16.990234 15.990234 A 1.0001 1.0001 0 0 0 16.292969 17.707031 L 23.585938 25 L 16.292969 32.292969 A 1.0001 1.0001 0 1 0 17.707031 33.707031 L 25 26.414062 L 32.292969 33.707031 A 1.0001 1.0001 0 1 0 33.707031 32.292969 L 26.414062 25 L 33.707031 17.707031 A 1.0001 1.0001 0 0 0 32.980469 15.990234 A 1.0001 1.0001 0 0 0 32.292969 16.292969 L 25 23.585938 L 17.707031 16.292969 A 1.0001 1.0001 0 0 0 16.990234 15.990234 z"></path>
+		</svg>
+    </button>
+  </div>
+</div>
+
       <nav class="top-nav">
         <div class="top-nav__container"><a class="top-nav__link" href="./"><img class="top-nav__logo" src="assets/img/logo.png" alt=""></a>
           <ul class="top-nav__menu">
@@ -62,7 +92,7 @@
           <ul>
             <div class="btn-ml">
               <button class="btn-top-nav">REGISTRO</button>
-              <button class="btn-top-nav btn-dark">INGRESAR</button>
+              <button class="modal-button btn-top-nav btn-dark">INGRESAR</button>
             </div>
           </ul>
           <button class="top-nav__mb-iconMenu hamburger hamburger--slider-r" type="button"><span class="hamburger-box"><span class="hamburger-inner"></span></span></button>
@@ -70,7 +100,7 @@
       </nav>
       <div class="btn-m-nav btn-ml">
         <button class="btn-top-nav">REGISTRO</button>
-        <button class="btn-top-nav btn-dark">INGRESAR</button>
+        <button class="modal-button-m btn-top-nav btn-dark">INGRESAR</button>
       </div>
     </header>
     <!--here ends the Main Header-->
