--- a/public/page2.html
+++ b/public/page2.html
@@ -53,7 +53,7 @@
     <div class="modal-left">
 	  <img src="assets/img/Logo.png" alt="">
       <h1 class="modal-title">Welcome!</h1>
-      <p class="modal-desc">Fanny PACK hexagon food truck, street art waistcoat kitsch.</p>
+      <p class="modal-desc">Fanny pack hexagon food truck, street art waistcoat kitsch.</p>
       <div class="input-block">
         <label for="email" class="input-label">Email</label>
         <input type="email" name="email" id="email" placeholder="Email">
