--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
     <header class="main-header"><div class="modal">
   <div class="modal-container">
     <div class="modal-left">
-	  <img src="assets/img/Logo.png" alt="">
+	  <img src="assets/img/logo.png" alt="">
       <h1 class="modal-title">Welcome!</h1>
       <p class="modal-desc">Fanny pack hexagon food truck, street art waistcoat kitsch.</p>
       <div class="input-block">
