--- a/public/index.html
+++ b/public/index.html
@@ -44,14 +44,14 @@
     <script src="https://kit.fontawesome.com/20f3c29ee8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Home | kikeestrada</title>
+    <title>Home | Central Apuestas</title>
   </head>
   <body class="home" itemscope itemtype="http://schema.org/WebPage">
     <!--here start the Main Header-->
     <header class="main-header"><div class="modal">
   <div class="modal-container">
     <div class="modal-left">
-	  <img src="assets/img/Logo.png" alt="">
+	  <img src="assets/img/logo.png" alt="">
       <h1 class="modal-title">Welcome!</h1>
       <p class="modal-desc">Fanny pack hexagon food truck, street art waistcoat kitsch.</p>
       <div class="input-block">
@@ -91,7 +91,7 @@
           </ul>
           <ul>
             <div class="btn-ml">
-              <button class="btn-top-nav">REGISTRO</button>
+              <button class="btn-top-nav"><a href="register.html">REGISTRO</a></button>
               <button class="modal-button btn-top-nav btn-dark">INGRESAR</button>
             </div>
           </ul>
@@ -99,7 +99,7 @@
         </div>
       </nav>
       <div class="btn-m-nav btn-ml">
-        <button class="btn-top-nav">REGISTRO</button>
+        <button class="btn-top-nav"><a href="register.html">REGISTRO</a></button>
         <button class="modal-button-m btn-top-nav btn-dark">INGRESAR</button>
       </div>
     </header>
@@ -116,19 +116,10 @@
           </div>
         </div>
       </div>
-      <div class="ed-grid m-grid-1 lg-grid-1 row-gap">
-        <div class="m-mr-2 s-mb-2"><img class="images-main" src="assets/img/MasDe200.png" alt=""></div>
-        <div class="ed-grid m-grid-4 s-grid-1"><img class="images-main" src="assets/img/img_4Seasons.png" alt=""><img class="images-main m-cols-2 s-rows-2 m-x-2" src="assets/img/img_casinogames.png" alt=""><img class="images-main" src="assets/img/img_pinocho.png" alt=""><img class="images-main" src="assets/img/img_venus.png" alt=""><img class="images-main" src="assets/img/img_vegasRoad.png" alt=""></div>
-        <div class="ed-grid s-grid-1 m-grid-2 l-grid-4 m-mr-2 s-mb-2 row-gap"><img class="images-main m-cols-2 s-rows-2" src="assets/img/MasDe200.png" alt=""><img class="images-main" src="assets/img/MasDe200.png" alt=""><img class="images-main" src="assets/img/MasDe200.png" alt=""><img class="images-main" src="assets/img/MasDe200.png" alt=""><img class="images-main" src="assets/img/MasDe200.png" alt=""></div>
-      </div>
-      <div class="ed-container">
-        <div class="ed-item">
-          <div class="main-div"></div>
-        </div>
-        <div class="centrar">
-          <div class="div"></div>
-        </div>
-      </div>
+            <div class="ed-grid m-grid-1 lg-grid-1 row-gap ">
+              <div class="ed-grid m-grid-4 s-grid-1 "><img class="m-cols-4 l-mb-2 images-main" src="assets/img/MasDe200.png" alt="MasDe200"><img class="images-main" src="assets/img/img_4Seasons.png" alt="img_4Seasons"><img class="m-cols-2 s-rows-2 m-x-2 images-main" src="assets/img/img_casinogames.png" alt="img_casinogames"><img class="images-main" src="assets/img/img_pinocho.png" alt="img_pinocho"><img class="images-main" src="assets/img/img_venus.png" alt="img_pinocho"><img class="images-main" src="assets/img/img_vegasRoad.png" alt="img_vegasRoad"><img class="m-cols-2 s-rows-2 images-main" src="assets/img/baloncesto.jpg" alt="baloncesto"><img class="images-main" src="assets/img/UFC (1).jpg" alt="UFC (1)"><img class="images-main" src="assets/img/Beisbol.jpg" alt="Beisbol"><img class="images-main" src="assets/img/futbol.jpg" alt="futbol"><img class="images-main" src="assets/img/Futbol-Americano.jpg" alt="Futbol-Americano">
+              </div>
+            </div>
     </main>
     <!--here ends the Main Container-->
     <!--here start the Main Footer-->
