--- a/public/page2.html
+++ b/public/page2.html
@@ -44,14 +44,14 @@
     <script src="https://kit.fontawesome.com/20f3c29ee8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Portfolio | kikeestrada</title>
+    <title>CentralApuestas | CentralApuestas</title>
   </head>
-  <body class="portfolio" itemscope itemtype="http://schema.org/WebPage">
+  <body class="CentralApuestas" itemscope itemtype="http://schema.org/WebPage">
     <!--here start the Main Header-->
     <header class="main-header"><div class="modal">
   <div class="modal-container">
     <div class="modal-left">
-	  <img src="assets/img/Logo.png" alt="">
+	  <img src="assets/img/logo.png" alt="">
       <h1 class="modal-title">Welcome!</h1>
       <p class="modal-desc">Fanny pack hexagon food truck, street art waistcoat kitsch.</p>
       <div class="input-block">
