--- a/public/banca.html
+++ b/public/banca.html
@@ -44,9 +44,9 @@
     <script src="https://kit.fontawesome.com/20f3c29ee8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Home | Central Apuestas</title>
+    <title>Contact | Central Apuestas</title>
   </head>
-  <body class="home" itemscope itemtype="http://schema.org/WebPage">
+  <body class="contact" itemscope itemtype="http://schema.org/WebPage">
     <!--here start the Main Header-->
     <header class="main-header"><div class="modal">
   <div class="modal-container">
@@ -106,20 +106,21 @@
     <!--here ends the Main Header-->
     <!--here start the Main Container-->
     <main class="main-container">
-      <div class="slider-container">
-        <div class="tns-single sep-top" id="tnsSingle">
-          <div>
-            <div class="tns-single__content"><img src="assets/img/mlb.jpg" alt="mlb"></div>
-          </div>
-          <div>
-            <div class="tns-single__content"><img src="assets/img/ufc.jpg" alt="ufc"></div>
+      <div class="main-con">
+        <div class="ed-grid lg-grid-6"><img src="/assets/img/banca.jpg" alt=""></div>
+        <div class="main-cont">
+          <div class="container-cont">
+            <h1>Banca</h1>
+            <h4>Variedad de metodos de pago.</h4>
+            <div class="ed-grid m-grid-4 s-grid-1 "><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card1Bancarios.jpg" alt="">
+                              <button class="btn-banca-nav">Mas informacion</button></a><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card2Bancarios.jpg" alt="">
+                              <button class="btn-banca-nav">Mas informacion</button></a><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card3Electronicas.jpg" alt="">
+                              <button class="btn-banca-nav">Mas informacion</button></a><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card4Criptomonedas.jpg" alt="">
+                              <button class="btn-banca-nav">Mas informacion</button></a>
+            </div>
           </div>
         </div>
       </div>
-            <div class="ed-grid m-grid-1 lg-grid-1 row-gap ">
-              <div class="ed-grid m-grid-4 s-grid-1 "><img class="m-cols-4 l-mb-2 images-main" src="assets/img/MasDe200.png" alt="MasDe200"><img class="images-main" src="assets/img/img_4Seasons.png" alt="img_4Seasons"><img class="m-cols-2 s-rows-2 m-x-2 images-main" src="assets/img/img_casinogames.png" alt="img_casinogames"><img class="images-main" src="assets/img/img_pinocho.png" alt="img_pinocho"><img class="images-main" src="assets/img/img_venus.png" alt="img_pinocho"><img class="images-main" src="assets/img/img_vegasRoad.png" alt="img_vegasRoad"><img class="m-cols-2 s-rows-2 images-main" src="assets/img/Baloncesto.jpg" alt="baloncesto"><img class="images-main" src="assets/img/UFC (1).jpg" alt="UFC (1)"><img class="images-main" src="assets/img/Beisbol.jpg" alt="Beisbol"><img class="images-main" src="assets/img/futbol.jpg" alt="futbol"><img class="images-main" src="assets/img/Futbol-Americano.jpg" alt="Futbol-Americano">
-              </div>
-            </div>
     </main>
     <!--here ends the Main Container-->
     <!--here start the Main Footer-->
