--- a/public/contact.html
+++ b/public/contact.html
@@ -44,9 +44,9 @@
     <script src="https://kit.fontawesome.com/20f3c29ee8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Home | Central Apuestas</title>
+    <title>Contact | Central Apuestas</title>
   </head>
-  <body class="home" itemscope itemtype="http://schema.org/WebPage">
+  <body class="contact" itemscope itemtype="http://schema.org/WebPage">
     <!--here start the Main Header-->
     <header class="main-header"><div class="modal">
   <div class="modal-container">
@@ -106,20 +106,23 @@
     <!--here ends the Main Header-->
     <!--here start the Main Container-->
     <main class="main-container">
-      <div class="slider-container">
-        <div class="tns-single sep-top" id="tnsSingle">
-          <div>
-            <div class="tns-single__content"><img src="assets/img/mlb.jpg" alt="mlb"></div>
-          </div>
-          <div>
-            <div class="tns-single__content"><img src="assets/img/ufc.jpg" alt="ufc"></div>
+      <div class="main-con">
+        <div class="ed-grid lg-grid-6"><img src="/assets/img/Baloncesto.jpg" alt=""></div>
+        <div class="main-cont">
+          <div class="container-cont">
+            <h1>Ponte en contacto con nosotros hoy.</h1>
+            <div class="text-cont"><p>Puede ponerse en contacto con nuestro Departamento de Servicio al Cliente para cuestiones relativas a cualquier acceso o problemas técnicos relacionados con nuestro Sportsbook y Casino. Responderemos a su solicitud en la brevedad posible.</p>
+<h2>Telefono:</h2>
+<p>Llámenos a cualquiera de nuestros números gratuitos.</p>
+<h2>Servicio al cliente</h2>
+<p><a href="http://bit.ly/Soporte-CdA" class="fa fa-whatsapp" aria-hidden="true"></a></p>
+<p>Con el fin de ponerse en contacto con nosotros vía E-mail, haga clic en el enlace de abajo:</p>
+<p>soporte@centraldeapuesta.com</p>
+
+            </div>
           </div>
         </div>
       </div>
-            <div class="ed-grid m-grid-1 lg-grid-1 row-gap ">
-              <div class="ed-grid m-grid-4 s-grid-1 "><img class="m-cols-4 l-mb-2 images-main" src="assets/img/MasDe200.png" alt="MasDe200"><img class="images-main" src="assets/img/img_4Seasons.png" alt="img_4Seasons"><img class="m-cols-2 s-rows-2 m-x-2 images-main" src="assets/img/img_casinogames.png" alt="img_casinogames"><img class="images-main" src="assets/img/img_pinocho.png" alt="img_pinocho"><img class="images-main" src="assets/img/img_venus.png" alt="img_pinocho"><img class="images-main" src="assets/img/img_vegasRoad.png" alt="img_vegasRoad"><img class="m-cols-2 s-rows-2 images-main" src="assets/img/Baloncesto.jpg" alt="baloncesto"><img class="images-main" src="assets/img/UFC (1).jpg" alt="UFC (1)"><img class="images-main" src="assets/img/Beisbol.jpg" alt="Beisbol"><img class="images-main" src="assets/img/futbol.jpg" alt="futbol"><img class="images-main" src="assets/img/Futbol-Americano.jpg" alt="Futbol-Americano">
-              </div>
-            </div>
     </main>
     <!--here ends the Main Container-->
     <!--here start the Main Footer-->
