--- a/public/index copy.html
+++ b/public/index copy.html
@@ -82,11 +82,11 @@
       <nav class="top-nav">
         <div class="top-nav__container"><a class="top-nav__link" href="./"><img class="top-nav__logo" src="assets/img/logo.png" alt=""></a>
           <ul class="top-nav__menu">
-                        <li class="top-nav__li"><a class="top-nav__anchor" href="lineas de apuesta">LINEAS DE APUESTA</a></li>
-                        <li class="top-nav__li"><a class="top-nav__anchor" href="casino">CASINO</a></li>
-                        <li class="top-nav__li"><a class="top-nav__anchor" href="caballos">CABALLOS</a></li>
-                        <li class="top-nav__li"><a class="top-nav__anchor" href="banca.html">BANCA</a></li>
-                        <li class="top-nav__li"><a class="top-nav__anchor" href="contact.html">CONTACTO</a></li>
+                        <li class="top-nav__li"><a class="top-nav__anchor" href="example">LINEAS DE APUESTA</a></li>
+                        <li class="top-nav__li"><a class="top-nav__anchor" href="Hola1">CASINO</a></li>
+                        <li class="top-nav__li"><a class="top-nav__anchor" href="Hola2">CABALLOS</a></li>
+                        <li class="top-nav__li"><a class="top-nav__anchor" href="Hola3">BANCA</a></li>
+                        <li class="top-nav__li"><a class="top-nav__anchor" href="Hola3">CONTACTO</a></li>
             <!--<li><a class="phone-info whatsapp" href="https://wa.me/56932130074"><i class="fa fa-whatsapp"></i><span class="text-phone"></span></a></li>-->
           </ul>
           <ul>
