--- a/public/banca copy.html
+++ b/public/banca copy.html
@@ -84,7 +84,7 @@
           <ul class="top-nav__menu">
                         <li class="top-nav__li"><a class="top-nav__anchor" href="lineas de apuesta">LINEAS DE APUESTA</a></li>
                         <li class="top-nav__li"><a class="top-nav__anchor" href="casino.html">CASINO</a></li>
-                        <li class="top-nav__li"><a class="top-nav__anchor" href="caballos.html">CABALLOS</a></li>
+                        <li class="top-nav__li"><a class="top-nav__anchor" href="caballos">CABALLOS</a></li>
                         <li class="top-nav__li"><a class="top-nav__anchor" href="banca.html">BANCA</a></li>
                         <li class="top-nav__li"><a class="top-nav__anchor" href="contact.html">CONTACTO</a></li>
             <li class="top-nav__li"><a class="phone-info whatsapp" href="https://wa.me/56932130074"><i class="fa fa-whatsapp"><i><span class="text-phone"></span></i></i></a></li>
