--- a/public/caballos.html
+++ b/public/caballos.html
@@ -107,16 +107,17 @@
     <!--here start the Main Container-->
     <main class="main-container">
       <div class="main-con">
-        <div class="ed-grid lg-grid-6"><img src="/assets/img/banca.jpg" alt=""></div>
+        <div class="ed-grid lg-grid-6"><img src="/assets/img/caballos.jpg" alt=""></div>
         <div class="main-cont">
           <div class="container-cont">
-            <h1 class="titles">Banca</h1>
-            <h4>Variedad de metodos de pago.</h4>
-            <div class="ed-grid m-grid-4 s-grid-1 "><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card1Bancarios.jpg" alt="">
-                              <button class="btn-banca-nav">Mas informacion</button></a><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card2Bancarios.jpg" alt="">
-                              <button class="btn-banca-nav">Mas informacion</button></a><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card3Electronicas.jpg" alt="">
-                              <button class="btn-banca-nav">Mas informacion</button></a><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card4Criptomonedas.jpg" alt="">
-                              <button class="btn-banca-nav">Mas informacion</button></a>
+            <h1 class="titles">Información de Caballos</h1>
+            <div class="sub-cont">
+              <div class="container-cont"><br>
+                <div class="text-cont"><h2>Caballos</h2>
+<p>Kentucky Derby, Preakness Stakes, Belmont Stakes, Breeders Cup, incluso la Dubai World Cup, todo en un solo lugar! Visita ahora nuestro hipódromo en línea donde tendrás acceso a más de 200 pistas en todo el mundo, los 365 días del año; realiza tu apuesta directa o exótica desde tu móvil, tableta o computadora de escritorio en los purasangres más conocidos. Sigue de cerca a el próximo Faraón Americano y conviértete en el mejor handicap con nosotros.</p>
+
+                </div>
+              </div>
             </div>
           </div>
         </div>
