--- a/public/casino.html
+++ b/public/casino.html
@@ -107,16 +107,17 @@
     <!--here start the Main Container-->
     <main class="main-container">
       <div class="main-con">
-        <div class="ed-grid lg-grid-6"><img src="/assets/img/banca.jpg" alt=""></div>
+        <div class="ed-grid lg-grid-6"><img src="/assets/img/casino.jpg" alt=""></div>
         <div class="main-cont">
           <div class="container-cont">
-            <h1 class="titles">Banca</h1>
-            <h4>Variedad de metodos de pago.</h4>
-            <div class="ed-grid m-grid-4 s-grid-1 "><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card1Bancarios.jpg" alt="">
-                              <button class="btn-banca-nav">Mas informacion</button></a><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card2Bancarios.jpg" alt="">
-                              <button class="btn-banca-nav">Mas informacion</button></a><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card3Electronicas.jpg" alt="">
-                              <button class="btn-banca-nav">Mas informacion</button></a><a href="https://chat.whatsapp.com/CdAFpfVfmNjJhT1Z2SFmWm"> <img class="img-metodosPay" src="assets/img/card4Criptomonedas.jpg" alt="">
-                              <button class="btn-banca-nav">Mas informacion</button></a>
+            <h1 class="titles">Juegos de Casino</h1>
+            <div class="font-low">
+              <h5>Nuestros juegos de casino de uso instantaneo son rapidos y faciles de <br> jugar, correr en todas las plataformas y no requiere descarga. <br><br> Central de Apuesta le ofrece todos sus juegos favoritos incluyendo <br> Blackjack, Ruleta, Caribbean Poker, Craps y Tragamonedas.</h5>
+            </div><br>
+            <div class="text-cont"><h2>Informacion sobre el Casino</h2>
+<p>En Central de Apuesta, hacemos nuestro mejor esfuerzo para educar, entretener, conectar, y retar a los entusiastas de los juegos de azar de todos los rincones del mundo. Aquí, los jugadores pueden estar seguros de la equidad de nuestros juegos, pagos rápidos y un excelente servicio al cliente.</p>
+<p>Para jugar con dinero real, simplemente inicie una sesión, haga clic en el enlace de 'Casino Online' y seleccione su juego favorito.</p>
+
             </div>
           </div>
         </div>
