--- a/public/contact.html
+++ b/public/contact.html
@@ -83,11 +83,11 @@
         <div class="top-nav__container"><a class="top-nav__link" href="./"><img class="top-nav__logo" src="assets/img/logo.png" alt=""></a>
           <ul class="top-nav__menu">
                         <li class="top-nav__li"><a class="top-nav__anchor" href="lineas de apuesta">LINEAS DE APUESTA</a></li>
-                        <li class="top-nav__li"><a class="top-nav__anchor" href="casino">CASINO</a></li>
-                        <li class="top-nav__li"><a class="top-nav__anchor" href="caballos">CABALLOS</a></li>
+                        <li class="top-nav__li"><a class="top-nav__anchor" href="casino.html">CASINO</a></li>
+                        <li class="top-nav__li"><a class="top-nav__anchor" href="caballos.html">CABALLOS</a></li>
                         <li class="top-nav__li"><a class="top-nav__anchor" href="banca.html">BANCA</a></li>
                         <li class="top-nav__li"><a class="top-nav__anchor" href="contact.html">CONTACTO</a></li>
-            <!--<li><a class="phone-info whatsapp" href="https://wa.me/56932130074"><i class="fa fa-whatsapp"></i><span class="text-phone"></span></a></li>-->
+            <li class="top-nav__li"><a class="phone-info whatsapp" href="https://wa.me/56932130074"><i class="fa fa-whatsapp"><i><span class="text-phone"></span></i></i></a></li>
           </ul>
           <ul>
             <div class="btn-ml">
@@ -110,7 +110,7 @@
         <div class="ed-grid lg-grid-6"><img src="/assets/img/Baloncesto.jpg" alt=""></div>
         <div class="main-cont">
           <div class="container-cont">
-            <h1>Ponte en contacto con nosotros hoy.</h1>
+            <h1 class="titles">Ponte en contacto con nosotros hoy.</h1>
             <div class="text-cont"><p>Puede ponerse en contacto con nuestro Departamento de Servicio al Cliente para cuestiones relativas a cualquier acceso o problemas técnicos relacionados con nuestro Sportsbook y Casino. Responderemos a su solicitud en la brevedad posible.</p>
 <h2>Telefono:</h2>
 <p>Llámenos a cualquiera de nuestros números gratuitos.</p>
