--- a/public/index.html
+++ b/public/index.html
@@ -83,11 +83,11 @@
         <div class="top-nav__container"><a class="top-nav__link" href="./"><img class="top-nav__logo" src="assets/img/logo.png" alt=""></a>
           <ul class="top-nav__menu">
                         <li class="top-nav__li"><a class="top-nav__anchor" href="lineas de apuesta">LINEAS DE APUESTA</a></li>
-                        <li class="top-nav__li"><a class="top-nav__anchor" href="casino">CASINO</a></li>
-                        <li class="top-nav__li"><a class="top-nav__anchor" href="caballos">CABALLOS</a></li>
+                        <li class="top-nav__li"><a class="top-nav__anchor" href="casino.html">CASINO</a></li>
+                        <li class="top-nav__li"><a class="top-nav__anchor" href="caballos.html">CABALLOS</a></li>
                         <li class="top-nav__li"><a class="top-nav__anchor" href="banca.html">BANCA</a></li>
                         <li class="top-nav__li"><a class="top-nav__anchor" href="contact.html">CONTACTO</a></li>
-            <!--<li><a class="phone-info whatsapp" href="https://wa.me/56932130074"><i class="fa fa-whatsapp"></i><span class="text-phone"></span></a></li>-->
+            <li class="top-nav__li"><a class="phone-info whatsapp" href="https://wa.me/56932130074"><i class="fa fa-whatsapp"><i><span class="text-phone"></span></i></i></a></li>
           </ul>
           <ul>
             <div class="btn-ml">
