--- a/public/index.html
+++ b/public/index.html
@@ -108,16 +108,71 @@
     <main class="main-container">
       <div class="slider-container">
         <div class="tns-single sep-top" id="tnsSingle">
-          <div>
-            <div class="tns-single__content"><img src="assets/img/mlb.jpg" alt="mlb"></div>
-          </div>
-          <div>
-            <div class="tns-single__content"><img src="assets/img/ufc.jpg" alt="ufc"></div>
-          </div>
+                    <div>
+                      <div class="tns-single__content"><img src="assets/img/UFC (1).jpg" alt="UFC"></div>
+                    </div>
+                    <div>
+                      <div class="tns-single__content"><img src="assets/img/mlb.jpg" alt="mlb"></div>
+                    </div>
         </div>
       </div>
-            <div class="ed-grid m-grid-1 lg-grid-1 row-gap ">
-              <div class="ed-grid m-grid-4 s-grid-1 "><img class="m-cols-4 l-mb-2 images-main" src="assets/img/MasDe200.png" alt="MasDe200"><img class="images-main" src="assets/img/img_4Seasons.png" alt="img_4Seasons"><img class="m-cols-2 s-rows-2 m-x-2 images-main" src="assets/img/img_casinogames.png" alt="img_casinogames"><img class="images-main" src="assets/img/img_pinocho.png" alt="img_pinocho"><img class="images-main" src="assets/img/img_venus.png" alt="img_pinocho"><img class="images-main" src="assets/img/img_vegasRoad.png" alt="img_vegasRoad"><img class="m-cols-2 s-rows-2 images-main" src="assets/img/Baloncesto.jpg" alt="baloncesto"><img class="images-main" src="assets/img/UFC (1).jpg" alt="UFC (1)"><img class="images-main" src="assets/img/Beisbol.jpg" alt="Beisbol"><img class="images-main" src="assets/img/futbol.jpg" alt="futbol"><img class="images-main" src="assets/img/Futbol-Americano.jpg" alt="Futbol-Americano">
+            <div class="ed-grid m-grid-1 lg-grid-1 ">
+              <div class="ed-grid m-grid-4 s-grid-1 rows-gap gap-2">
+                      <div class="m-cols-4 l-mb-2 container-main-img"><img class="images-main" src="assets/img/MasDe200.png" alt="MasDe200">
+                        <div class="container-btn">
+                          <button class="btn">APUESTA AHORA</button>
+                        </div>
+                      </div>
+                      <div class="container-main-img"><img class="images-main" src="assets/img/img_4Seasons.png" alt="img_4Seasons">
+                        <div class="container-btn">
+                          <button class="btn">APUESTA AHORA</button>
+                        </div>
+                      </div>
+                      <div class="m-cols-2 s-rows-2 m-x-2 container-main-img"><img class="images-main" src="assets/img/img_casinogames.png" alt="img_casinogames">
+                        <div class="container-btn">
+                          <button class="btn">APUESTA AHORA</button>
+                        </div>
+                      </div>
+                      <div class="container-main-img"><img class="images-main" src="assets/img/img_pinocho.png" alt="img_pinocho">
+                        <div class="container-btn">
+                          <button class="btn">APUESTA AHORA</button>
+                        </div>
+                      </div>
+                      <div class="container-main-img"><img class="images-main" src="assets/img/img_venus.png" alt="img_pinocho">
+                        <div class="container-btn">
+                          <button class="btn">APUESTA AHORA</button>
+                        </div>
+                      </div>
+                      <div class="container-main-img"><img class="images-main" src="assets/img/img_vegasRoad.png" alt="img_vegasRoad">
+                        <div class="container-btn">
+                          <button class="btn">APUESTA AHORA</button>
+                        </div>
+                      </div>
+                      <div class="m-cols-2 s-rows-2 container-main-img"><img class="images-main" src="assets/img/Baloncesto.jpg" alt="baloncesto">
+                        <div class="container-btn">
+                          <button class="btn">APUESTA AHORA</button>
+                        </div>
+                      </div>
+                      <div class="container-main-img"><img class="images-main" src="assets/img/UFC (1).jpg" alt="UFC (1)">
+                        <div class="container-btn">
+                          <button class="btn">APUESTA AHORA</button>
+                        </div>
+                      </div>
+                      <div class="container-main-img"><img class="images-main" src="assets/img/Beisbol.jpg" alt="Beisbol">
+                        <div class="container-btn">
+                          <button class="btn">APUESTA AHORA</button>
+                        </div>
+                      </div>
+                      <div class="container-main-img"><img class="images-main" src="assets/img/futbol.jpg" alt="futbol">
+                        <div class="container-btn">
+                          <button class="btn">APUESTA AHORA</button>
+                        </div>
+                      </div>
+                      <div class="container-main-img"><img class="images-main" src="assets/img/Futbol-Americano.jpg" alt="Futbol-Americano">
+                        <div class="container-btn">
+                          <button class="btn">APUESTA AHORA</button>
+                        </div>
+                      </div>
               </div>
             </div>
     </main>
