--- a/public/register.html
+++ b/public/register.html
@@ -108,7 +108,7 @@
           <ul>
             <div class="btn-ml">
               <button class="btn-top-nav"><a href="register.html">REGISTRO</a></button>
-              <button class="modal-button btn-top-nav btn-dark">INGRESAR</button>
+              <button class="modal-button btn-top-nav btn-dark">Login</button>
             </div>
           </ul>
           <button class="top-nav__mb-iconMenu hamburger hamburger--slider-r" type="button"><span class="hamburger-box"><span class="hamburger-inner"></span></span></button>
