--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,7 @@
                           <div class="container-btn">
                             <button class="btn">APUESTA AHORA</button>
                           </div></a></div>
-                      <div class="container-main-img"><a href="lista_apuestas.html"><img class="images-main" src="assets/img/UFC.jpg" alt="UFC">
+                      <div class="container-main-img"><a href="lista_apuestas.html"><img class="images-main" src="assets/img/UFCMain.jpg" alt="UFC">
                           <div class="container-btn">
                             <button class="btn">APUESTA AHORA</button>
                           </div></a></div>
