--- a/public/index.html
+++ b/public/index.html
@@ -76,18 +76,18 @@
 		</button>
 	
       </div> 
-    <input type="hidden" name="BackEndUrl" value="apuestas.centraldeapuesta.com">
+    <input type="hidden" name="BackEndUrl" value="https://apuestas.apuestamx.com/">
 	</form>
       <p class="sign-up">Aún no tienes una cuenta? <a href="/register.html">Registrate Ahora !</a></p>
     </div>
     <div class="modal-right">
       <img src="assets/img/ufc-ri-modal.png" alt="">
     </div>
-    <button class="icon-button close-button">
+    <div name="botonClose" class="icon-button close-button">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
     		<path d="M 25 3 C 12.86158 3 3 12.86158 3 25 C 3 37.13842 12.86158 47 25 47 C 37.13842 47 47 37.13842 47 25 C 47 12.86158 37.13842 3 25 3 z M 25 5 C 36.05754 5 45 13.94246 45 25 C 45 36.05754 36.05754 45 25 45 C 13.94246 45 5 36.05754 5 25 C 5 13.94246 13.94246 5 25 5 z M 16.990234 15.990234 A 1.0001 1.0001 0 0 0 16.292969 17.707031 L 23.585938 25 L 16.292969 32.292969 A 1.0001 1.0001 0 1 0 17.707031 33.707031 L 25 26.414062 L 32.292969 33.707031 A 1.0001 1.0001 0 1 0 33.707031 32.292969 L 26.414062 25 L 33.707031 17.707031 A 1.0001 1.0001 0 0 0 32.980469 15.990234 A 1.0001 1.0001 0 0 0 32.292969 16.292969 L 25 23.585938 L 17.707031 16.292969 A 1.0001 1.0001 0 0 0 16.990234 15.990234 z"></path>
 		</svg>
-    </button>
+    </div>
   </div>
 </div>
 
@@ -123,10 +123,10 @@
       <div class="slider-container">
         <div class="tns-single sep-top" id="tnsSingle"><a href="lista_apuestas.html">
                       <div>
-                        <div class="tns-single__content"><img src="assets/img/UFC (1).jpg" alt="UFC" width="100%" height="100%"></div>
+                        <div class="tns-single__content"><img src="//media.betimages.com/media/jpg/centraldeapuesta/ufc.jpg" alt="UFC" width="100%" height="100%"></div>
                       </div></a><a href="lista_apuestas.html">
                       <div>
-                        <div class="tns-single__content"><img src="assets/img/mlb.jpg" alt="mlb" width="100%" height="100%"></div>
+                        <div class="tns-single__content"><img src="//media.betimages.com/media/jpg/centraldeapuesta/mlb.jpg" alt="mlb" width="100%" height="100%"></div>
                       </div></a>
         </div>
       </div>
