--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 		</button>
 	
       </div> 
-    <input type="hidden" name="BackEndUrl" value="https://apuestas.apuestamx.com/">
+      <input type="hidden" name="BackEndUrl" value="https://apuestas.apuestamx.com/">
 	</form>
       <p class="sign-up">Aún no tienes una cuenta? <a href="/register.html">Registrate Ahora !</a></p>
     </div>
@@ -123,10 +123,10 @@
       <div class="slider-container">
         <div class="tns-single sep-top" id="tnsSingle"><a href="lista_apuestas.html">
                       <div>
-                        <div class="tns-single__content"><img src="//media.betimages.com/media/jpg/centraldeapuesta/ufc.jpg" alt="UFC" width="100%" height="100%"></div>
+                        <div class="tns-single__content"><img src="https://media.betimages.com//media/jpg/centraldeapuesta/ufc.jpg" alt="UFC" width="100%" height="100%"></div>
                       </div></a><a href="lista_apuestas.html">
                       <div>
-                        <div class="tns-single__content"><img src="//media.betimages.com/media/jpg/centraldeapuesta/mlb.jpg" alt="mlb" width="100%" height="100%"></div>
+                        <div class="tns-single__content"><img src="https://media.betimages.com//media/jpg/centraldeapuesta/mlb.jpg" alt="mlb" width="100%" height="100%"></div>
                       </div></a>
         </div>
       </div>
