--- a/public/lista_apuestas.html
+++ b/public/lista_apuestas.html
@@ -76,7 +76,7 @@
 		</button>
 	
       </div> 
-      <input type="hidden" name="BackEndUrl" value="https://apuestas.apuestamx.com/">
+      <input type="hidden" name="BackEndUrl" value="https://apuestas.centraldeapuesta.com/">
 	</form>
       <p class="sign-up">Aún no tienes una cuenta? <a href="/register.html">Registrate Ahora !</a></p>
     </div>
