Push bugs corregidos

--- a/public/casino.html
+++ b/public/casino.html
@@ -81,7 +81,7 @@
       <p class="sign-up">Aún no tienes una cuenta? <a href="/register.html">Registrate Ahora !</a></p>
     </div>
     <div class="modal-right">
-      <img src="assets/img/ufc-ri-modal.png" alt="">
+      <img src="https://media.betimages.com//media/jpg/centraldeapuesta/mlb.jpg" alt="">
     </div>
     <div name="botonClose" class="icon-button close-button">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
@@ -124,7 +124,7 @@
         <div class="bg-casino"><img src="/assets/img/casino.jpg" alt=""></div>
         <div class="main-cont ed-grid">
           <div class="container-cont">
-            <div class="text-cont"><h2>Informacion sobre el Casino</h2>
+            <div class="text-cont"><h1>Informacion sobre el Casino</h1>
 <p>En Central de Apuesta, hacemos nuestro mejor esfuerzo para educar, entretener, conectar, y retar a los entusiastas de los juegos de azar de todos los rincones del mundo. Aquí, los jugadores pueden estar seguros de la equidad de nuestros juegos, pagos rápidos y un excelente servicio al cliente.</p>
 <p>Para jugar con dinero real, simplemente inicie una sesión, haga clic en el enlace de 'Casino Online' y seleccione su juego favorito.</p>
 
