--- a/public/contact.html
+++ b/public/contact.html
@@ -81,7 +81,7 @@
       <p class="sign-up">Aún no tienes una cuenta? <a href="/register.html">Registrate Ahora !</a></p>
     </div>
     <div class="modal-right">
-      <img src="assets/img/ufc-ri-modal.png" alt="">
+      <img src="https://media.betimages.com//media/jpg/centraldeapuesta/mlb.jpg" alt="">
     </div>
     <div name="botonClose" class="icon-button close-button">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
@@ -131,7 +131,7 @@
 <h2>Servicio al cliente</h2>
 <p><a href="http://bit.ly/Soporte-CdA" class="fa fa-whatsapp" aria-hidden="true"></a></p>
 <p>Con el fin de ponerse en contacto con nosotros vía E-mail, haga clic en el enlace de abajo:</p>
-<p>soporte@centraldeapuesta.com</p>
+<p><a href="mailto:soporte@Winsport724.com">soporte@centraldeapuesta.com</a></p>
 
             </div>
           </div>
