--- a/public/reglas-deportes.html
+++ b/public/reglas-deportes.html
@@ -81,7 +81,7 @@
       <p class="sign-up">Aún no tienes una cuenta? <a href="/register.html">Registrate Ahora !</a></p>
     </div>
     <div class="modal-right">
-      <img src="assets/img/ufc-ri-modal.png" alt="">
+      <img src="https://media.betimages.com//media/jpg/centraldeapuesta/mlb.jpg" alt="">
     </div>
     <div name="botonClose" class="icon-button close-button">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
@@ -882,6 +882,25 @@ Si una serie empata y no se ofrece ninguna opción de empate, todas las apuestas
 <p>For props on individual athletes, competitor must start the first event they are scheduled to participate for action.</p>
 </li>
 </ol>
+
+                </div>
+              </div>
+              <div class="a-container">
+                <p class="a-btn">HANDBALL <span></span></p>
+                <div class="a-panel"><h3>HANDBALL</h3>
+<p>A menos que se indique lo contrario, todas las apuestas se resolverán en función de la puntuación al final del tiempo reglamentario y excluyendo el tiempo extra si se juega. Todos los resultados de apuestas de partidos se basan en el resultado al final de un juego programado de 60 minutos, a menos que se indique lo contrario.</p>
+<p>Si los 60 minutos programados no se juegan, las apuestas se anularán, con la excepcion de los siguientes incluiran tiempo extra / penales para propósito de calificacion:</p>
+<ul>
+<li>
+<p>Para calificar</p>
+</li>
+<li>
+<p>Para levantar trofeo</p>
+</li>
+</ul>
+<p>Específicamente para cualquier competencia que use una Regla de la Misericordia, en caso de que dicha Regla se convoque en un partido, todas las apuestas se mantendrán en el marcador en ese momento.</p>
+<p>Si se cambia el lugar de un partido, las apuestas ya realizadas se mantendrán siempre que el equipo local aún esté designado como tal.</p>
+<p>Si el equipo local y el visitante para un partido en la lista juegan el partido en el lugar del equipo visitante, las apuestas se mantendrán siempre que el equipo local todavía esté oficialmente designado como tal, de lo contrario las apuestas serán anuladas.</p>
 
                 </div>
               </div>
